--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,15 @@
 #nest
-NEST_PORT=5000
+PORT=5000
+
+#DB
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_DATABASE=basic
+
+#private key
+APP_KEY=Super_Secret_Key
+APP_TOKEN_TIME=1d
+APP_HEADER_KEY=Super_Secret_Header_Key
