add comment api and add mailer

--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,12 @@ AWS_REGION=ap-southeast-1
 AWS_S3_BUCKET_NAME=ideas-dash
 AWS_S3_ENDPOINT=
 
+#mailer
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=yourmail@gmail.com
+MAIL_FROM=noreply@idash.noti
+MAIL_PASSWORD=
+
 #limit
 MAX_UPLOAD_SIZE=5000000
