--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
+    "export-to-csv": "^0.2.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "jszip": "^3.9.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
